--- a/carefree-ui/style.css
+++ b/carefree-ui/style.css
@@ -1,66 +1,207 @@
-body
-{
-  display:flex;
-  flex-direction:column;
-  min-height:100vh;
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lobster&family=Mukta:wght@200;300;400;500;600;700;800&display=swap');
+
+:root {
+    --dark: #21435D;
+    --light: #F7F6F6;
+    --dark-accent: #807595;
+    --dark-accent-rgb: 128, 117, 149;
+    --accent-alpha: #80759515;
+    --light-accent: #7B949C;
+    --light-accent-rgb: 123, 148, 156;
+    --main: #7A6F8F;
+}
+
+body {
+    margin: 0;
+    color: var(--dark);
+    background-color: var(--light);
+    display:flex;
+    flex-direction:column;
+    min-height:100vh;
+    font-family: 'Mukta', Courier, monospace;
+}
+
+.header {
+    margin-bottom: 13px;
 }
 
 .wrapper
 {
-  flex:1;
-  max-width: 75%;
+    flex:1;
 }
 
-#recipe-name
-{
-    border: 0; 
+h1 {
+    color: var(--dark);
+    font-size: 180%;
+    margin: 0;
+}
+
+.mx {
+    margin-left: 14%;
+    margin-right: 14%;
+}
+
+.mb {
+    margin-bottom: 20px;
+}
+
+.mb-sm {
+    margin-bottom: 10px;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    vertical-align: top;
+    column-gap: 5px;
+    row-gap: 8px;
+}
+
+.button, .button-dark, .recipe-select {
+    border: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    font-size: large;
+    padding: 8px 12px;
+    cursor: pointer;
+    background-size: 210% auto;
+    background-image: linear-gradient(90deg, #FFFFFF00 48%, rgba(123,148,156,1) 50%, #FFFFFF00 100%);
+    transition: color .4s, background-color .2s, box-shadow .2s, background-position .4s;
+}
+
+.button-dark {
+    background-color: var(--main);
+    color: var(--light);
+    border-color: var(--dark);
+}
+
+.button-dark:hover {
+    background-color: var(--light);
+    color: var(--dark);
+}
+
+.button-dark:active {
+    background-color: var(--dark-accent);
+    color: var(--light);
+    box-shadow: 2px 2px 10px 1px rgba(0,0,0,.2);
+}
+
+.recipe-select {
+    border: none;
+    background-color: transparent;
+    font-family: 'Indie Flower', Courier, monospace;
+    font-size: x-large;
+}
+
+.recipe-select:hover {
+    background-position: right;                
+    color: var(--light);
+}
+
+.recipe-select:active {
+    background-color: var(--light);
+    color: var(--main);
+}
+
+.delete-btn:hover {
+    box-shadow: 2px 2px 10px 1px rgba(0,0,0,.2);
+}
+
+.delete-btn:active {
+    box-shadow: 2px 2px 10px 1px rgba(0,0,0,.2);
+    opacity: .4;
+}
+
+.outline, .outline-colored {
+    border: solid;
+    border-width: 1px;
+    border-radius: 15px;
+    border-color: var(--dark);
+    background-color: var(--accent-alpha);
+    padding: 1% 2%;
+}
+
+.outline-colored {
+    border-color: rgba(var(--dark-accent-rgb), 1);
+    background-color: var(--main);
+    color: var(--light);
+}
+
+.text-light {
+    color: var(--light) !important; 
+}
+
+#edit-button,
+#back-button {
+    font-family: 'Indie Flower';
+    font-size: x-large;
+    background-color: transparent;
+    border: none;
+}
+
+#back-button {
+    padding: 5px 5px;
+}
+
+#edit-button {
+    padding: 0 20px;
+}
+
+#edit-button:hover,
+#back-button:hover {
+    background-color: rgba(var(--light-accent-rgb), .4);
+}
+
+#edit-button:active,
+#back-button:active {
+    background-color: transparent;
+}
+
+.list-group {
+    font-size: large;
+    margin: 0;
+    margin-bottom: 10px;
+    padding-left: 30px;
+}
+
+#recipe-list {
+    padding-left: 1.5%;
+}
+
+.text-left {
+    text-align: left !important;
+}
+
+.right-margin {
+    margin-right: 4px;
+}
+
+#website-title {
+    font-size:50px;
+    font-family: 'Lobster', Courier, monospace;
+    margin: 0;
+    margin-bottom: 40px;
+    padding-top: 8px;
+    padding-left: 1.5%;
+    padding-bottom: 15px;
+    border-bottom:solid;
+    color: var(--light);
+    background-color: var(--dark);
+    cursor: pointer;
+    transition: opacity .3s;
+}
+
+.delete-btn {
+    border: none;
+    background-color: transparent;
+}
+
+#recipe-title {
     font-size: xx-large;
-    size: 80;
 }
 
-
-/* Will Implement
-
-@media screen and (min-width: 600px) {
-  //For Tablets
-      .container {
-          width: 100;
-      }
-  }
-  
-  @media screen and (min-width: 768px) {
-  //For Laptops
-      .container {
-          width: 738px;
-      }
-  }
-  
-  @media screen and (min-width: 992px) {
-  //For Large Laptops
-      .container {
-          width: 962px;
-      }
-  }
-  
-  @media screen and (min-width: 1280px) {
-  //For Big TV's (HD Screens) 
-      .container {
-          width: 1250px;
-      }
-  }
-  
-  
-  @media screen and (min-width: 1920px) {
-  //For Projectors or Higher Resolution Screens (Full HD)
-      .container {
-          width: 1890px;
-      }
-  }
-  @media screen and (min-width: 3840px) {
-  //For 4K Displays (Ultra HD)
-      .container {
-          width: 3810px;
-      }
-  }
-
-*/
+footer {
+    margin-top: 80px;
+    padding-left: 1.5%;
+    background-color: var(--accent-alpha);
+}
