--- a/carefree-ui/css/style.css
+++ b/carefree-ui/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lobster&family=Mukta:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap&family=Mukta:wght@200;300;400;500;600;700;800&display=swap&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 :root {
     --dark: #21435D;
@@ -11,6 +11,7 @@
     --main: #7A6F8F;
     --margin-x: 14%;
     --gradient: conic-gradient(at 125% 50%, #b78cf7, #ff7c94, #ffcf0d, #ff7c94, #b78cf7);
+    --default-font-family: 'Mukta', 'Lato', sans-serif;
 }
 
 body {
@@ -20,7 +21,13 @@ body {
     display:flex;
     flex-direction:column;
     min-height:100vh;
-    font-family: 'Mukta', Courier, monospace;
+    font-family: var(--default-font-family);
+}
+
+h1 {
+    color: var(--dark);
+    font-size: 180%;
+    margin: 0;
 }
 
 .header {
@@ -32,10 +39,10 @@ body {
     flex:1;
 }
 
-h1 {
-    color: var(--dark);
-    font-size: 180%;
-    margin: 0;
+footer {
+    margin-top: 80px;
+    padding-left: 1.5%;
+    background-color: var(--accent-alpha);
 }
 
 .flex-display {
@@ -93,6 +100,7 @@ h1 {
     border-width: 1px;
     border-radius: 10px;
     font-size: large;
+    font-family: var(--default-font-family);
     padding: 8px 12px;
     cursor: pointer;
     background-size: 210% auto;
@@ -124,7 +132,6 @@ h1 {
 .recipe-select {
     border: none;
     background-color: transparent;
-    font-family: 'Indie Flower', Courier, monospace;
     font-size: x-large;
 }
 
@@ -171,7 +178,6 @@ h1 {
     border-width: 1px;
     border-radius: 15px;
     font-size: xx-large;
-    font-family: 'Indie Flower';
     box-sizing: border-box;
     padding: 10px;
     margin-left: var(--margin-x);
@@ -222,7 +228,6 @@ h1 {
 
 .list-group {
     font-size: x-large;
-    font-family: 'Indie Flower';
     margin: 0;
     margin-bottom: 10px;
     padding-left: 30px;
@@ -241,8 +246,9 @@ h1 {
 }
 
 #website-title {
-    font-size:50px;
-    font-family: 'Lobster', Courier, monospace;
+    font-size: 3.5rem;
+    font-family: 'Lobster Two', cursive;
+    font-style: italic;
     margin: 0;
     margin-bottom: 40px;
     padding-top: 8px;
@@ -274,8 +280,3 @@ h1 {
     font-family: 'Indie Flower';
 }
 
-footer {
-    margin-top: 80px;
-    padding-left: 1.5%;
-    background-color: var(--accent-alpha);
-}
