--- a/carefree-ui/css/style.css
+++ b/carefree-ui/css/style.css
@@ -30,219 +30,18 @@ h1 {
     margin: 0;
 }
 
-.header {
-    margin-bottom: 13px;
-}
-
-.wrapper
-{
-    flex:1;
-}
-
 footer {
     margin-top: 80px;
     padding-left: 1.5%;
     background-color: var(--accent-alpha);
 }
 
-.flex-display {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    column-gap: 5px;
+.header {
+    margin-bottom: 13px;
 }
 
-.flex-1 {
-    flex: 1;
-}
-
-.li-buttons {
-    margin-right: 5px;
-    cursor: pointer;
-    transition: box-shadow .2s, opacity .2s;
-}
-
-.li-buttons:hover {
-    box-shadow: 2px 2px 10px 1px rgba(0,0,0,.5);
-}
-
-.li-buttons:active {
-    opacity: .6;
-}
-
-.mx {
-    margin-left: var(--margin-x);
-    margin-right: var(--margin-x);
-}
-
-.mb {
-    margin-bottom: 20px;
-}
-
-.mb-sm {
-    margin-bottom: 10px;
-}
-
-.d-none {
-    display: none;
-}
-
-.grid {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    vertical-align: top;
-    column-gap: 5px;
-    row-gap: 8px;
-}
-
-.button, .button-dark, .recipe-select {
-    border: solid;
-    border-width: 1px;
-    border-radius: 10px;
-    font-size: large;
-    font-family: var(--default-font-family);
-    padding: 8px 12px;
-    cursor: pointer;
-    background-size: 210% auto;
-    background-image: linear-gradient(90deg, #FFFFFF00 48%, rgba(123,148,156,1) 50%, #FFFFFF00 100%);
-    transition: color .4s, background-color .2s, box-shadow .2s, background-position .4s;
-}
-
-.button-dark {
-    background-color: var(--main);
-    color: var(--light);
-    border-color: var(--dark);
-}
-
-.button-dark:hover {
-    background-color: var(--light);
-    color: var(--dark);
-}
-
-.button-dark:active {
-    background-color: var(--dark-accent);
-    color: var(--light);
-    box-shadow: 2px 2px 10px 1px rgba(0,0,0,.2);
-}
-
-.button:hover {
-    background-color: var(--light-accent);
-}
-
-.recipe-select {
-    border: none;
-    background-color: transparent;
-    font-size: x-large;
-}
-
-.recipe-select:hover {
-    background-position: right;                
-    color: var(--light);
-}
-
-.recipe-select:active {
-    background-color: var(--light);
-    color: var(--main);
-}
-
-.delete-btn:hover {
-    box-shadow: 2px 2px 10px 1px rgba(0,0,0,.2);
-}
-
-.delete-btn:active {
-    box-shadow: 2px 2px 10px 1px rgba(0,0,0,.2);
-    opacity: .4;
-}
-
-.outline, .outline-colored {
-    border: solid;
-    border-width: 1px;
-    border-radius: 15px;
-    border-color: var(--dark);
-    background-color: var(--accent-alpha);
-    padding: 1% 2%;
-}
-
-.outline-colored {
-    border-color: rgba(var(--dark-accent-rgb), 1);
-    background-color: var(--main);
-    color: var(--light);
-}
-
-.text-light {
-    color: var(--light) !important; 
-}
-
-#recipe-name {
-    border: solid;
-    border-width: 1px;
-    border-radius: 15px;
-    font-size: xx-large;
-    box-sizing: border-box;
-    padding: 10px;
-    margin-left: var(--margin-x);
-    width: calc(100% - var(--margin-x) * 2);
-    background-color: rgba(var(--light-accent-rgb), .2);
-}
-
-#recipe-name.border-error {
-    border-color: red;
-}
-
-#edit-button,
-#back-button {
-    font-family: 'Indie Flower';
-    font-size: x-large;
-    background-color: transparent;
-    border: none;
-}
-
-#back-button {
-    padding: 5px 5px;
-}
-
-#edit-button {
-    padding: 0 20px;
-}
-
-#edit-button:hover,
-#back-button:hover {
-    background-color: rgba(var(--light-accent-rgb), .4);
-}
-
-#edit-button:active,
-#back-button:active {
-    background-color: transparent;
-}
-
-.border-bottom {
-    border-bottom: outset;
-    border-width: 1px;
-    padding: 5px;
-    margin: 10px 0px;
-}
-
-#add-ingredient-input {
-    box-sizing: border-box;
-}
-
-.list-group {
-    font-size: x-large;
-    margin: 0;
-    margin-bottom: 10px;
-    padding-left: 30px;
-}
-
-#recipe-list {
-    padding-left: 1.5%;
-}
-
-.text-left {
-    text-align: left !important;
-}
-
-.right-margin {
-    margin-right: 4px;
+.wrapper {
+    flex:1;
 }
 
 #website-title {
@@ -261,22 +60,53 @@ footer {
     transition: opacity .3s;
 }
 
-.delete-btn {
-    border: none;
-    background-color: transparent;
+.outline, .outline-colored {
+    border: solid;
+    border-width: 1px;
+    border-radius: 15px;
+    border-color: var(--dark);
+    background-color: var(--accent-alpha);
+    padding: 1% 2%;
+}
+
+.outline-colored {
+    border-color: rgba(var(--dark-accent-rgb), 1);
+    background-color: var(--main);
+    color: var(--light);
+}
+
+#recipe-name {
+    border: solid;
+    border-width: 1px;
+    border-radius: 15px;
+    font-size: xx-large;
+    box-sizing: border-box;
+    padding: 10px;
+    margin-left: var(--margin-x);
+    width: calc(100% - var(--margin-x) * 2);
+    background-color: rgba(var(--light-accent-rgb), .2);
+}
+
+#recipe-name.border-error {
+    border-color: red;
+}
+
+.list-group {
+    font-size: x-large;
+    margin: 0;
+    margin-bottom: 10px;
+    padding-left: 30px;
+}
+
+#recipe-list {
+    padding-left: 1.5%;
 }
 
 .recipe-header {
     padding-left: 2%;
 }
 
-.border-error {
-    border-radius: 2px;
-    border-color: red;
-}
-
 #recipe-title {
     font-size: xx-large;
     font-family: 'Indie Flower';
 }
-
