--- a/carefree-ui/css/buttons.css
+++ b/carefree-ui/css/buttons.css
@@ -9,6 +9,7 @@ button {
   font-family: var(--default-font-family);
   padding: 0.25rem 0.75rem;
   cursor: pointer;
+  transition: color .2s, background-color .2s;
 }
 
 /* button::before {
@@ -30,8 +31,8 @@ button:hover {
   border: none;
   font-size: x-large;
   background-size: 200% auto;
-  background-image: linear-gradient(90deg, #FFFFFF00 50%, rgba(123,148,156,1) 50%, rgba(123,148,156,1) 85%, #FFFFFF00 100%);
-  transition: color .3s, background-position .3s;
+  background-image: linear-gradient(90deg, #FFFFFF00 50%, rgba(123,148,156,1) 50%, rgba(123,148,156,1) 90%, #FFFFFF00 100%);
+  transition: color .2s, background-position .2s;
 }
 /* 
 .gradient-btn::before {
@@ -100,6 +101,7 @@ button:hover {
 }
 
 .delete-btn:hover {
+  background-color: darkred;
   box-shadow: 2px 2px 10px 1px rgba(0,0,0,.2);
 }
 
